# markdown-command

./: .gitignore  README.md  pyproject.toml
src/: markdown_command.py
src/markdown_command/: markdown_command.py
src/markdown_command.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
