[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown_command"
version = "0.9"
authors = [
  { name="Michal Moroz", email="michal@makimo.pl" },
  { name="Wojciech Mielczarek", email="wojciech.mielczarek@makimo.pl" },
]
description = "Process a Markdown file, execute commands within and print file contents with executed commands' output."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/makimo/markdown-command"
"Bug Tracker" = "https://github.com/makimo/markdown-command/issues"

[project.dependencies]
docopt == "0.6.2"

[project.scripts]
markdown-command = "markdown_command:main"